<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp"
    android:fitsSystemWindows="true"
    android:background="@color/dandelion"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_up"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/poppins_bold"
            android:textSize="32sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/dotsColor"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:textSize="14sp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstname_ET"
                android:inputType="text"
                android:hint="@string/firstname_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/dotsColor"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastname_ET"
                android:inputType="text"
                android:hint="@string/lastname_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/dotsColor"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_ET"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/dotsColor"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_ET"
                    android:hint="@string/password_hint"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:background="@drawable/input_field"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/dotsColor"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:layout_toLeftOf="@+id/showHideBtn"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/showHideBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/show_password"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:textAlignment="center"/>

            </LinearLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/sign_up_btn"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:id="@+id/progress_bar"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_please"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>