<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp"
    android:fitsSystemWindows="true"
    android:background="@color/dandelion"
    tools:context=".MainLoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/poppins_bold"
            android:textSize="32sp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_in"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/poppins_bold"
            android:textSize="32sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_please"
            android:textColor="@color/dotsColor"
            android:fontFamily="@font/poppins"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:textSize="14sp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_ET"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/dotsColor"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_ET"
                android:hint="@string/password_hint"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/input_field"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/dotsColor"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:singleLine="true"/>

            <CheckBox
                android:id="@+id/showHideBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorAccent"
                android:text="Rodyti slaptažodį"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_btn"
                android:background="@drawable/button_back"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="60dp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:id="@+id/progress_bar"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_signed_up"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_please"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorAccent"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/forgotPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>