<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp"
    android:fitsSystemWindows="true"
    android:background="@color/dandelion"
    tools:context=".SendEmailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"/>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dotsColor"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_ET"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/input_field"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/dotsColor"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="5dp"
                android:singleLine="true"/>

            <Button
                android:id="@+id/sendEmailBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:background="@drawable/button_back"
                android:fontFamily="@font/poppins_bold"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="60dp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:id="@+id/progress_bar"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyreset"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>